[tool.poetry]
name = "v4vapp-hive-fastapi-auth"
version = "0.1.0"
description = "A FastAPI based Python API server which includes authentication via a JWT Token signed by a Hive Public Key"
authors = ["Brian of London <brian@v4v.app>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.2"
uvicorn = "^0.27.0.post1"
single-source = "^0.3.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
flake8 = "^7.0.0"
black = "^24.1.1"
pytest-asyncio = "^0.23.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
